--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,6 @@ header h2{
     color: #fff;
     z-index: 2;
 }
-
 .about{
     position: relative;
     z-index: 5;
@@ -57,6 +56,20 @@ header h2{
     font-size: 1.2em;
     max-width: 700px;
     
+}
+
+img{
+    opacity: 0.9;
+}
+img:hover{
+    opacity: 1;
+}
+
+
+.showcase{
+    z-index: 0;
+    display: flex;
+        
 }
 
 .main video{
@@ -107,17 +120,18 @@ ul{
 
 footer{
     display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    bottom: 0;
     z-index: 5;
     color: white;
-   
-    position: absolute;
+    position: fixed;
     width: 80%;
+    height: 100%;
     left: 100px;
-    
-    align-items: center;
-    /* height: 10%; */
-    bottom: 0;
+   
 }
+
 footer h4{
     font-weight: 100;
     position: absolute;
