--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,22 +8,26 @@
 
 
 header{
-
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     padding: 40px 100px;
-    z-index: 100;
+    z-index: 10;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 header h2{
-    cursor: pointer;
     font-size: 1.5em;
 }
+
+a:hover{
+    cursor: pointer;
+}
+
+
 
 .main{
     position: absolute;
@@ -59,17 +63,28 @@ header h2{
 }
 
 img{
-    opacity: 0.9;
+    
+    opacity: 0.8;
 }
 img:hover{
+    cursor: pointer;
     opacity: 1;
 }
 
 
 .showcase{
+    align-content: center;
     z-index: 0;
     display: flex;
+    padding: 50px;
+    
         
+}
+
+.showcase img{
+    display: flex;
+    width: 100%;
+    height: auto;
 }
 
 .main video{
@@ -105,7 +120,8 @@ ul{
     text-decoration: none;
     display: flex;
 }
- .menu-items ul li a{
+
+a{
      text-decoration: none;
      font-size: 24px;
      color: white;
@@ -113,7 +129,7 @@ ul{
      display: flex;
 }
 
-.menu-items ul li a:hover{
+ li:hover{
     transform: translateY(-5px);
     transition: .2s ease-in-out;
 }
