--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
+/* import montserrat font */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700;800&display=swap');
+
+/* Sets universal parameters  */
 *{
     margin: 0;
     padding: 0;
@@ -6,7 +9,7 @@
     font-family: 'montserrat', Verdana, Geneva, Tahoma, sans-serif;
 }
 
-
+/* Header styling */
 header{
     position: absolute;
     top: 0;
@@ -20,15 +23,14 @@ header{
 }
 
 header h2{
-    font-size: 1.5em;
+    font-size: 2em;
 }
 
 a:hover{
     cursor: pointer;
 }
 
-
-
+/* Main section styling */
 .main{
     position: absolute;
     right: 0;
@@ -42,6 +44,8 @@ a:hover{
     color: #fff;
     z-index: 2;
 }
+
+/* About section styling */
 .about{
     position: relative;
     z-index: 5;
@@ -62,8 +66,8 @@ a:hover{
     
 }
 
+/* Sets image opacity and hover functionality */
 img{
-    
     opacity: 0.8;
 }
 img:hover{
@@ -71,8 +75,11 @@ img:hover{
     opacity: 1;
 }
 
-
+/* Showcase section styling */
 .showcase{
+    position: relative;
+    bottom: 0;
+    bottom: 10px;
     align-content: center;
     z-index: 0;
     display: flex;
@@ -80,13 +87,13 @@ img:hover{
     
         
 }
-
 .showcase img{
     display: flex;
     width: 100%;
     height: auto;
 }
 
+/* Sets video position */
 .main video{
     z-index: -5;
     position: absolute;
@@ -96,9 +103,10 @@ img:hover{
     left: 0;
 }
 
+/* Sets social media icons position */
 .social{
-    /* position: absolute; */
-    /* bottom: 20px; */
+    position: absolute; 
+    bottom: 0; 
     z-index: 5;
     display: flex;
     align-items: flex-end;
@@ -106,11 +114,14 @@ img:hover{
 .social li{
     margin-right: 20px;
 }
+
+/* Sets unordered list styling */
 ul{
     list-style-type: none;
     cursor: pointer;
 }
 
+/* Sets position and styling of menu unordered list */
 .menu-items ul{
     z-index: 5;
     color: white;
@@ -121,6 +132,7 @@ ul{
     display: flex;
 }
 
+/* Sets link styling */
 a{
      text-decoration: none;
      font-size: 24px;
@@ -129,11 +141,13 @@ a{
      display: flex;
 }
 
+/* Sets list item hover styling  */
  li:hover{
     transform: translateY(-5px);
     transition: .2s ease-in-out;
 }
 
+/* Sets footer position and styling */
 footer{
     display: flex;
     align-items: flex-end;
@@ -155,6 +169,7 @@ footer h4{
     
 }
 
+/* Sets media queries */
 @media (max-width: 1022px){
     .menu-items ul{
         top: 50%;
