--- a/style.css
+++ b/style.css
@@ -59,9 +59,11 @@ video{
   }
 
 .stargazer{
+    box-shadow: 25px 25px 50px 0 white inset, -25px -25px 50px 0 white inset;    position: fixed;
     position:relative;
     width: 20vw;
 }
+
 
 .stargazer-header{
     font-size: 1.5em;
