--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -1,72 +1,71 @@
 
 
 .bg{
-    min-height: 100vh;
+    height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
 
 }
 .main{
-    height: 200vh;
+    height: 100vh;
     width: 100vw;
 }
 
 .navbar{
     position: absolute;
-    left: 200px;
-    top: 0px;
+    /* top: 0px; */
 }
 
-
-
-
-
-.headshot{
+.weather{
+    left: 10%;
+    /* border: oldlace solid 2px; */
     position: absolute;
-    display: flex;
-    justify-content: end;
-    width: 30%;
-    opacity: .8;
+    width: 30vw;
     margin-left: auto;
     top: 200px
 }
 
-.showcase2{
-    position: relative;
-    bottom: 0;
-    right: 0;
-    width: 30%;
+
+.password-generator{
+    position: absolute;
+    right: 10%;
+    /* border: oldlace solid 2px; */
+    bottom:-30%;
+    width: 30vw;
     opacity: .8;
-    filter:grayscale(100%)
     
 }
-.text{
-    position: absolute;
-    display: flex;
+.clouds{
+    position: relative;
+    width: 30vw;
+    opacity: .8;
+
 }
+
+.code{
+    position: relative;
+    width: 30vw;
+    opacity:.8;
+    filter:grayscale(100%)
+
+}
+
  /* .about{
      top: 200px;
      display: block;
      min-height: 100vh;
  } */
 
- .blurb{
-    position: absolute;
-    font-size: larger;
-    top: 20%;
-    display: flex;
-    justify-content: end;
-    margin-left: auto;
-}
 
-.headshot:hover {
+
+.clouds:hover {
     cursor: pointer;
     opacity: 1;
-    transition: 1s ease-in-out;
+    transition: .7s ease-in-out;
     filter: contrast(-50%);
   }
 
-  .showcase2:hover {
+  .code:hover {
     cursor: pointer;
     opacity: 1;
     transition: 1s ease-in-out;
