--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
 
-*{
+/* *{
     color: white;
-}
+} */
 video{
     max-height: 100%;
     max-width: 100%;
     z-index: -5;
-    position: fixed;
+    /* position: relative; */
     width: 100vw;
     height: 100vh;
     object-fit: cover;
-    top: 0;
-    left: 0;
+ 
+}
+
+.main{
+    position: absolute;
+    border: wheat solid 2px;
+    height: 200vh;
+}
+
+.navbar{
+    z-index: 5;
 }
 
 
@@ -59,9 +68,9 @@ video{
   }
 
 .stargazer{
-    box-shadow: 25px 25px 50px 0 white inset, -25px -25px 50px 0 white inset;    position: fixed;
     position:relative;
     width: 20vw;
+    border-radius: 20px;
 }
 
 
