--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ video{
     width: 100vw;
     height: 100vh;
     object-fit: cover;
- 
+    top: 0;
+    left: 0;
 }
 
-.main{
-    position: absolute;
-    border: wheat solid 2px;
-    height: 200vh;
-}
+/* .main{
+    height: 100vh;
+    width: 100vw;
+} */
 
 .navbar{
     z-index: 5;
