--- a/style.css
+++ b/style.css
@@ -1,95 +1,121 @@
-
 *{
-box-sizing: border-box;}
-
-
-video{
-    z-index: -5;
-    object-fit: cover;
-    top: 0;
-    left: 0;
-}
-
-.main{
-    height: 100vh;
-    width: 100vw;
-}
-
-.navbar{
-    z-index: 5;
-}
-
-
-.content
-{
-    width: 68vw;
-    top: 15%;
-    left: 15vw;
-    position: absolute;
-    background: transparent;
-    transition: 0.5s;
-    z-index: 2;
-}
-
-.inner{
-    max-width: 50%;
-    font-size: large;
-}
-
-.btn{
-    color: white;
-}
-
-.btn:hover {
-    color: #fff;
-    background-color: #5485a1;
-    transition: .7s;
-}
-
-
-.card1{
-    position: absolute;
-    /* border: rgb(194, 139, 36) solid 2px; */
-    top: 45vh;
-    right: 10%;
-    width: 20vw;
-    height: 50vh;
-}
-
-
-
-
-.stargazer{
-    display: block;
-    transition: 1s ease-in-out;
-    width: 300px;
-    opacity: .5;
-    top: 45vh;
-    border-radius: 10px;
-}
-
-.stargazer:hover,
-.stargazer:hover  + .stargazer-header {
-    font-size: 2em;
-    opacity: 1;
-    cursor: pointer;
-    transform: scale(1.05);
-  }
-.stargazer-header{
-    z-index: 5;
-    color: #e6e6e6;
-    /* border:wheat solid 2px; */
-    font-size: 1.5em;
-    width: 15vw;
-    right: 15%;
-    top: 42vh;
-}
-
-
-.stargazer-link{
-    position: absolute;
-    /* border: white solid 2px; */
-    width: 100vw;
-    height: 50vh;
-}
-
+    box-sizing: border-box;}
+    
+    
+    video{
+        z-index: -5;
+        object-fit: cover;
+        height: 100vh;
+        position: fixed;
+        width: 100vw;
+    
+     
+    }
+    
+    .span1 {
+        color: #e6e6e6;
+        transition: 1s;
+    }
+    
+    .span2{
+        font-weight: bold;
+        color: #e6e6e6;
+        transition: 1s;
+    }
+    .span1:hover,
+    .span2:hover{
+        transform: scale(1.05);
+        color: #b69121;
+    }
+    h2{
+        transition: .75s ease-in-out;
+    }
+    h2:hover{
+        letter-spacing: 5px;
+    }
+    
+    .main{
+        position: absolute;
+        /* border: wheat solid 2px; */
+        height: 200vh;
+        width: 100%;
+    }
+    
+    .navbar{
+        z-index: 5;
+    }
+    
+    
+    .content
+    {
+        width: 68vw;
+        top: 15%;
+        left: 15vw;
+        position: absolute;
+        background: transparent;
+        transition: 0.5s;
+        z-index: 2;
+    }
+    
+    .inner{
+        max-width: 50%;
+        font-size: large;
+    }
+    
+    .btn{
+        color: white;
+    }
+    
+    .btn:hover {
+        color: #fff;
+        background-color: #5485a1;
+        transition: .7s;
+    }
+    
+    
+    .card1{
+        position: absolute;
+        /* border: rgb(194, 139, 36) solid 2px; */
+        top: 45vh;
+        right: 10%;
+        width: 20vw;
+        height: 50vh;
+    }
+    
+    
+    
+    
+    .stargazer{
+        display: block;
+        transition: 1s ease-in-out;
+        width: 300px;
+        opacity: .5;
+        top: 45vh;
+        border-radius: 10px;
+    }
+    
+    .stargazer:hover,
+    .stargazer:hover  + .stargazer-header {
+        font-size: 2em;
+        opacity: 1;
+        cursor: pointer;
+        transform: scale(1.05);
+      }
+    .stargazer-header{
+        z-index: 5;
+        color: #e6e6e6;
+        /* border:wheat solid 2px; */
+        font-size: 1.5em;
+        width: 15vw;
+        right: 15%;
+        top: 42vh;
+    }
+    
+    
+    .stargazer-link{
+        position: absolute;
+        /* border: white solid 2px; */
+        width: 100vw;
+        height: 50vh;
+    }
+    
