--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -46,7 +46,8 @@
     position: relative;
     width: 30vw;
     opacity: .7;
-    border-radius: 10px;;
+    border-radius: 10px;
+    transition: .75s ease-in-out;
 
 
 }
@@ -57,6 +58,8 @@
     opacity:.8;
     filter:grayscale(100%);
     border-radius: 10px;
+    transition: .75s ease-in-out;
+
 
 }
 
@@ -94,7 +97,8 @@
     border-radius: 10px;
     width: 30vw;
     opacity: .7;
-    filter: grayscale(100%)
+    filter: grayscale(100%);
+    transition: .75s ease-in-out;
 }
 .headshot:hover{
     cursor: pointer;
