--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -139,8 +139,16 @@
 .contacts li{
     font-size: 3em;
     color: white;
-    transition: .7s ease-in-out;
+    transition: .5s ease-in-out;
+}
+i{
+    color: white;
+    transition: .5s ease-in-out
 }
 .contacts li:hover{
     transform: translateY(-20px);
+    color: #98c1d9;
+}
+i:hover{
+    color: #98c1d9;
 }
