Changed selected font colors

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     font-family: montserrat;
 
+
 }
 
 .main{
@@ -57,6 +58,7 @@ h2:hover{
 }
 .content
 {
+    color: white;
     width: 68vw;
     top: 15%;
     left: 8vw;
