--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -20,6 +20,7 @@
 }
 
 .weather{
+    color: white;
     left: 10%;
     /* border: oldlace solid 2px; */
     position: absolute;
@@ -34,6 +35,7 @@
 
 
 .password-generator{
+    color: white;
     position: absolute;
     right: 10%;
     /* border: oldlace solid 2px; */
@@ -108,6 +110,7 @@
 }
 
 .blurb{
+    color: white;
     font-size: 1.3em;
 }
 
@@ -118,6 +121,7 @@
 }
 
 .coming-soon{
+    color: white;
     position: absolute;
     top: 35%;
     Left: 20%;
