--- a/style/contact.css
+++ b/style/contact.css
@@ -20,8 +20,9 @@
   height: 80vh;
 }
 
-.coming-soon {
+.header {
   -webkit-text-stroke-width: 0.05rem;
+  -webkit-text-stroke-color: #999999;
   font-size: 4rem;
   font-weight: 700;
   letter-spacing: 0.5rem;
@@ -48,8 +49,8 @@
 
 }
 .icons a{
-    transition: 0.7s ease-in-out;
+    transition: 0.5s ease-in-out;
 }
 .icons a:hover{
-    transform: translateY(-40px);
+    transform: translateY(-25px);
 }
