--- a/style/projects.css
+++ b/style/projects.css
@@ -42,6 +42,7 @@
     opacity: 1;
     filter: grayscale(0%);
     transform: scale(1.04);
+    cursor: pointer;
 }
 .pic-title{
     letter-spacing: .5rem;
