Added carousel and sections to About section

--- a/style/projects.css
+++ b/style/projects.css
@@ -1,88 +1,123 @@
 .data-video {
-    filter: grayscale(100%);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -10;
-    width: 100%;
-    height: 100%;
-  }
-  .data-main {
-    display: flex;
-    height: 100vh;
-    width: 100%;
-  }
-
-.projects{
-    
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: auto;
-    top: 20%;
-    justify-content: start;
-    align-items: center;
-    z-index: 3;
+  filter: grayscale(100%);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -10;
+  width: 100%;
+  height: 100%;
 }
-.projects-header{
-    margin-bottom: 10%;
-}
-.project-row{
-    display: flex;
+.data-main {
+  display: flex;
+  height: 100vh;
+  width: 100%;
 }
 
-.pic{
+.projects {
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: auto;
+  top: 20%;
+  justify-content: start;
+  align-items: center;
+  z-index: 3;
+}
+.projects-header {
+  margin-bottom: 10%;
+}
+.project-row {
+  display: flex;
+}
+.pic {
+  height: 100%;
+  width: 100%;
+  opacity: 0.3;
+  filter: grayscale(100%);
+  transition: all 0.8s ease;
+}
+.pic0{
     height: 100%;
     width: 100%;
     opacity: 0.3;
     filter: grayscale(100%);
     transition: all 0.8s ease;
 }
-.pic:hover{
-    opacity: 1;
-    filter: grayscale(0%);
-    transform: scale(1.04);
-    cursor: pointer;
+.pic:hover {
+  opacity: 1;
+  filter: grayscale(0%);
+  transform: scale(1.04);
+  cursor: pointer;
 }
-.pic-title{
-    letter-spacing: .5rem;
-    font-size: 1.5rem;
-}
-.projects-header{
-    color: white;
-    opacity: 0.5;
-    font-weight: 400;
-    letter-spacing: 0.4rem;
+.pic0:hover {
+  opacity: 1;
+  filter: grayscale(0%);
+  transform: scale(1.04);
+  cursor: pointer;
 }
 
-.project-row{
-    margin-top: 5%;
-    padding-bottom: 5%;
+.projects-header {
+  color: white;
+  opacity: 0.5;
+  font-weight: 400;
+  letter-spacing: 0.4rem;
 }
-.projects-video{
-    position:  cover;
+
+.project-row {
+  margin-top: 5%;
+  padding-bottom: 5%;
 }
-.pic-title{
+.projects-video {
+  position: cover;
+}
+.pic-title {
+  position: relative;
+  top: -100%;
+  color: white;
+  letter-spacing: 0.5rem;
+  font-size: 1.5rem;
+}
+.pic-title0 {  
     position: relative;
-    top: -100%;
-    color: white;
-    
+  top: -100%;
+  color: white;
+  letter-spacing: 0.5rem;
+  font-size: 1.5rem;
 }
 
-.margin0, .margin1, .margin2, .margin3, .margin4, .margin5{
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
+.margin0,
+.margin1,
+.margin2,
+.margin3,
+.margin4,
+.margin5 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (min-width: 1000px){
-    .projects-header{
-        margin-bottom: 5%;
-    }
+@media (min-width: 768px) {
+
+ .pic-title0{
+     top: -88%;
+ }
 }
-@media (min-width: 1600px){
-    .projects-header{
-        margin-bottom: 0%;
-    }
+
+@media (min-width: 1000px) {
+  .projects-header {
+    margin-bottom: 5%;
+  }
 }
+@media (min-width: 1390px) {
+
+    .pic-title0{
+        top: -85%;
+    }
+   }
+@media (min-width: 1600px) {
+  .projects-header {
+    margin-bottom: 0%;
+  }
+}
+
