--- a/style/aboutstyle.css
+++ b/style/aboutstyle.css
@@ -10,8 +10,6 @@
 }
 .data-main {
   display: flex;
-  height: 100vh;
-  width: 100vw;
 }
 .about {
   margin-left: 0;
@@ -23,18 +21,33 @@
   align-items: center;
   top: 15%;
   left: 0;
-  height: 85vh;
+  height: auto;
 }
 
 .blurb {
+  margin-top: 25%;
+  letter-spacing: .5rem;
   text-justify: inter-word;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 3rem;
   width: 80%;
   position: relative;
-  bottom: 20%;
-  color: #999999;
-  opacity: 0.5;
+  top: 30%;
+  color: white;
+  text-shadow: 3px 3px #999999;
+}
+.services {
+  /* border: white solid 1px; */
+margin-top: 30%;
+margin-bottom: 5%;
+  letter-spacing: .8rem;
+  text-justify: inter-word;
+  text-align: center;
+  font-size: 4rem;
+  width: 80%;
+  position: relative;
+  color: white;
+  text-shadow: 2px 2px #999999;
 }
 .welcome {
   -webkit-text-stroke-width: 0.05rem;
@@ -44,10 +57,90 @@
   letter-spacing: 0.5rem;
   transition: ease-in-out 0.7s;
   color: transparent;
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  text-align: center;
 }
-/* .welcome:hover {
-  text-shadow: 0 5px 5px white, 0 -2px 1px white;
-  opacity: 0.3;
-} */
 
+.services-section{
+  display: flex;
+  background-color: rgb(255, 255, 255, .6);
+  justify-content: center;
+  background-blend-mode: overlay;
+  margin-top: 20%;
+  width: 100%;
+  border: white solid 1px;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  position: relative;
+  top: 50%;
+  color: black;
+}
 
+.be-services-section{
+  display: flex;
+  background-color:rgba(128, 138, 159, .6);
+  justify-content: center;
+  background-blend-mode: overlay;
+  margin-top: 20%;
+  width: 100%;
+  /* border: white solid 1px; */
+  padding-top: 10%;
+  padding-bottom: 10%;
+  position: relative;
+  top: 50%;
+  color: white;
+}
+.fe-content{
+  width: 80%;
+  opacity: 1;
+}
+.fe-header{
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  font-size: 5rem;
+  opacity: 1;
+}
+.fe-blurb{
+  margin-top: 5%;
+  text-justify: inter-word;
+  text-align: justify;
+  font-size: 2rem;
+  font-weight: 500;
+}
+.cs-blurb{
+  /* border: black solid 1px; */
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-justify: inter-word;
+  text-align: justify;
+  font-size: 2rem;
+  font-weight: 500;
+}
+.fe-tech{
+  display: flex;
+  justify-content: center;
+  margin-top: 15%;
+  font-size: 3.5rem;
+}
+
+.pic0{
+ max-width:400px;
+}
+.pic{
+max-width: 300px;}
+.pic1{
+max-width: 200px;}
+
+img{
+  /* border: black solid 1px; */
+}
+
+@media (min-width: 768px) {
+  .fe-logos {
+    flex-direction: row;
+  }
