--- a/style/carousel.css
+++ b/style/carousel.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
 }
 
-input[type=radio] {
+input[type='radio'] {
   display: none;
 }
 
@@ -14,7 +14,7 @@ input[type=radio] {
   left: 0;
   right: 0;
   margin: auto;
-  transition: transform .4s ease;
+  transition: transform 0.4s ease;
   cursor: pointer;
 }
 
@@ -33,76 +33,85 @@ input[type=radio] {
 .cards {
   position: relative;
   width: 100%;
-  height: 100%;
-  margin-bottom: 20px;
+  height: 90%;
 }
-.card-header1{
-    top: 75%;
-    letter-spacing: .5rem;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    left: 0;
-    right: 0;
-    align-items: center;
-    color: #805b10;
-    position: absolute;
+.card-header1 {
+  font-size: 3rem;
+  top: 80%;
+  letter-spacing: 0.5rem;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  left: 0;
+  right: 0;
+  align-items: center;
+  color: #805b10;
+  position: absolute;
+  text-shadow: 2px 2px white;
 }
-.card-header2{
-    -webkit-text-stroke-width: 0.02rem;
-    -webkit-text-stroke-color: #805b10;
-    font-weight: 500;
-    top: 75%;
-    text-shadow: 3px 3px #333333;
-    letter-spacing: .5rem;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    left: 0;
-    right: 0;
-    align-items: center;
-    color:#805b10;
-    position: absolute;
-    overflow: hidden;
+.card-header2 {
+  font-size: 3rem;
+  -webkit-text-stroke-width: 0.02rem;
+  -webkit-text-stroke-color: #805b10;
+  font-weight: 500;
+  top: 80%;
+  text-shadow: 3px 3px black;
+  letter-spacing: 0.5rem;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  left: 0;
+  right: 0;
+  align-items: center;
+  color: #805b10;
+  position: absolute;
+  overflow: hidden;
 }
-.card-header3{
-    -webkit-text-stroke-width: 0.02rem;
-    -webkit-text-stroke-color: black;
-    font-weight: 500;
-    top: 75%;
-    text-shadow: 3px 3px black;
-    letter-spacing: .5rem;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    left: 0;
-    right: 0;
-    align-items: center;
-    color: white;
-    position: absolute;
-    overflow: hidden;
+.card-header3 {
+  font-size: 3rem;
+  -webkit-text-stroke-width: 0.02rem;
+  -webkit-text-stroke-color: black;
+  font-weight: 500;
+  top: 80%;
+  text-shadow: 3px 3px black;
+  letter-spacing: 0.5rem;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  left: 0;
+  right: 0;
+  align-items: center;
+  color: white;
+  position: absolute;
+  overflow: hidden;
 }
 img {
- height: 100%; 
+  height: 100%;
 }
 
-#item-1:checked ~ .cards #card3, #item-2:checked ~ .cards #card1, #item-3:checked ~ .cards #card2 {
-  transform: translatex(-40%) scale(.8);
-  opacity: .4;
+#item-1:checked ~ .cards #card3,
+#item-2:checked ~ .cards #card1,
+#item-3:checked ~ .cards #card2 {
+  transform: translatex(-40%) scale(0.8);
+  opacity: 0.4;
   z-index: 0;
 }
 
-#item-1:checked ~ .cards #card2, #item-2:checked ~ .cards #card3, #item-3:checked ~ .cards #card1 {
-  transform: translatex(40%) scale(.8);
-  opacity: .4;
+#item-1:checked ~ .cards #card2,
+#item-2:checked ~ .cards #card3,
+#item-3:checked ~ .cards #card1 {
+  transform: translatex(40%) scale(0.8);
+  opacity: 0.4;
   z-index: 0;
 }
 
-#item-1:checked ~ .cards #card1, #item-2:checked ~ .cards #card2, #item-3:checked ~ .cards #card3 {
+#item-1:checked ~ .cards #card1,
+#item-2:checked ~ .cards #card2,
+#item-3:checked ~ .cards #card3 {
   transform: translatex(0) scale(1);
   opacity: 1;
   z-index: 1;
-  
+
   img {
     box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
   }
