--- a/style/aboutstyle.css
+++ b/style/aboutstyle.css
@@ -153,11 +153,12 @@ margin-top: 30%;
   border-radius: 50%;
   filter: grayscale(100%);
   opacity: .8;
-  transition: .3s ease-in-out;
+  transition: .15s ease-in-out;
 }
 
 .personal-pic:hover{
-  filter: grayscale(20%)
+  filter: grayscale(0%);
+  opacity: 1;
 }
 
 .pic0{
