changed about section to services. made social section now about section

--- a/style/aboutstyle.css
+++ b/style/aboutstyle.css
@@ -83,7 +83,7 @@ margin-top: 30%;
   justify-content: center;
   background-blend-mode: overlay;
   width: 100%;
-  /* border: white solid 1px; */
+  margin-top: 5%;
   padding-top: 10%;
   padding-bottom: 10%;
   position: relative;
